
This file shows the changes in recent releases of TinyMCE for MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

TinyMCE 4.2.0
====================================
- [#42] Fix issue with passed-in values that caused TinyMCE to not load correctly
- Update TinyMCE to 3.3.9.3
- [#21] Add a bunch of system settings for controlling TinyMCE output and cleanup
- [#41] Add tiny.forced_root_block setting
- Fix issue with using tinymce with richtext TVs when Resource's richtext is set to false
- Fix issue with using tinymce in front-end

TinyMCE 4.1.2
====================================
- [#33] Fixed missing language reference issue
- Fixed problem that stripped // in http:// on image selection from MODx.Browser
- Fixed language issue with modxlink plugin

TinyMCE 4.1.1
====================================
- Fixed issue with Tiny preventing save bar loading on derivative Resource types

TinyMCE 4.1.0
====================================
- Fixed issues with context support of thumbnails and relative paths
- Fixed issues with language overriding
- Added theme_advanced_blockformats system setting
- Fixed bugs with width of tinymce in panels
- Fixed issue with language loading in non-english languages and modxlink plugin
- Enabled resizing by default on editors
- Added "Toggle Editor" checkbox to main content panels
- Fixed issue where buttons/sourceview didn't mark form dirty

TinyMCE 4.0.5
====================================
- Added fixes for bugs with template changing and richtext tvs

TinyMCE 4.0.4
====================================
- Fixed random bugs with ampersands and other issues
- Fixed bugs in relative path mapping
- Fixed bugs that occur only in strict PHP environments

TinyMCE 4.0.3
====================================
- Fixed bug where TinyMCE wasn't working with TVs
- Moved config array to properties array to prevent collusions of config vars in tiny JS